# python_modules

./: README.md
module_0/: Readme.md
module_0/ex0/: ft_hello_garden.py
module_0/ex1/: ft_plot_area.py
module_0/ex2/: ft_harvest_total.py
module_0/ex3/: ft_plant_age.py
module_0/ex4/: ft_water_reminder.py
module_0/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
module_0/ex6/: ft_garden_summary.py
module_0/ex7/: ft_seed_inventory.py
module_1/ex0/: ft_garden_intro.py
module_1/ex1/: ft_garden_data.py
module_1/ex2/: ft_plant_growth.py
module_1/ex3/:  ft_plant_factory.py
module_1/ex4/: ft_garden_security.py
module_1/ex5/: ft_plant_types.py
module_1/ex6/: ft_garden_analytics.py
module_10/: readme.md
module_10/ex0/: lambda_spells.py
module_10/ex1/: higher_magic.py
module_10/ex2/: scope_mysteries.py
module_10/ex3/: functools_artifacts.py
module_10/ex4/: decorator_mastery.py
module_2/ex0/: ft_first_exception.py
module_2/ex1/: ft_different_errors.py
module_2/ex2/: ft_custom_errors.py
module_2/ex3/: ft_finally_block.py
module_2/ex4/: ft_raise_errors.py
module_2/ex5/: ft_garden_management.py
module_3/data_quest_tools /: advanced_data_helper.py  data_generator.py  exercise_0_help.py  exercise_1_helper.py
module_4/: README.md  new_discovery.txt  sample_data.json
module_5/: README.md
module_6/: README.md  ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
module_7/: README.md
module_8/: readme.md
module_8/ex1/: loading.py  pyproject.toml
module_9/: readme.md
(+54 files in other folders)
