[project]
name = "ex1"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.1.3,<2.2.0)",
    "numpy (>=1.26.0,<2.0.0)"
]

[dependency-groups]
dev = [
    "matplotlib (>=3.10.8,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
